--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,73 @@
+{% set route_name = app.request.attributes.get('_route') %}
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.6/css/flag-icon.min.css">
-
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/css/mdb.min.css" rel="stylesheet">
+    <!-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/js/mdb.min.js"></script>
+    <!--Font Aweso -->
+    <script src="https://kit.fontawesome.com/a5291c0be8.js" crossorigin="anonymous"></script>
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
 {% block body %}
     {% block header %}
         <header>
+            <!-- navbar -->
+            <nav class="navbar navbar-dark navbar-expand-lg elegant-color-dark">
+                <a class="navbar-brand" href="#">
+                    <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" height="30" class="d-inline-block align-top"
+                         alt="mdb logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item {% if route_name == "dashboard" %}active{% endif %}">
+                            <a class="nav-link" href="/dashboard">Dashboard <span class="sr-only">{% if route_name == "dashboard" %}(current){% endif %}</span></a>
+                        </li>
+                        <li class="nav-item {% if route_name == "tracks" %}active{% endif %}">
+                            <a class="nav-link" href="/tracks">Tracks <span class="sr-only">{% if route_name == "tracks" %}(current){% endif %}</span></a>
+                        </li>
+                        <li class="nav-item {% if route_name == "artists" %}active{% endif %}">
+                            <a class="nav-link" href="/artists">Artists <span class="sr-only">{% if route_name == "artists" %}(current){% endif %}</span></a>
+                        </li>
+                        <li class="nav-item {% if route_name == "playlists" %}active{% endif %}">
+                            <a class="nav-link" href="/playlists">Playlist <span class="sr-only">{% if route_name == "playlists" %}(current){% endif %}</span></a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto nav-flex-icons">
+                        <li class="nav-item avatar">
+                            <a class="nav-link p-0" href="#">
+                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
+                                     alt="avatar image" height="35">
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect waves-light" href="/logout">
+                                <i class="fas fa-sign-out-alt"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </header>
     {% endblock %}
     <main>
@@ -23,7 +79,7 @@
     <footer>
     </footer>
 {% endblock %}
-<script src="https://kit.fontawesome.com/a5291c0be8.js" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
