--- a/templates/view/dashboard.html.twig
+++ b/templates/view/dashboard.html.twig
@@ -3,7 +3,10 @@
 {% block content %}
 
     <div class="container">
-        <h1>Profile</h1>
+        <div class="text-center mt-4 pt-2 pb-4">
+            <h1 class="h1-size">Dashboard</h1>
+            <h5 class="text-muted thin">Looking for your stats?</h5>
+        </div>
         <div class="row">
         <div class="col-3">
         <div class="card">
@@ -88,7 +91,6 @@
 
 
     {% block javascripts %}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script type="application/javascript">
         $("#pause").on('click', function() {
             $.ajax({
