--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,25 +6,42 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/css/mdb.min.css" rel="stylesheet">
-    <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/js/mdb.min.js"></script>
-    <!--Font Aweso -->
     <script src="https://kit.fontawesome.com/a5291c0be8.js" crossorigin="anonymous"></script>
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+    {% endblock %}
 </head>
 <body>
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+    {#<script type="text/javascript">#}
+        {#$("#pause").on('click', function() {#}
+            {#$.ajax({#}
+                {#url:'{{ (path('pause')) }}',#}
+                {#type: "POST",#}
+                {#dataType: "json",#}
+                {#async: true,#}
+                {#success: function (data)#}
+                {#{#}
+                    {#console.log(data)#}
+                {#}#}
+            {#});#}
+        {#});#}
+        {#$("#play").on('click', function() {#}
+            {#$.ajax({#}
+                {#url:'{{ (path('play')) }}',#}
+                {#type: "POST",#}
+                {#dataType: "json",#}
+                {#async: true,#}
+                {#success: function (data)#}
+                {#{#}
+                    {#console.log(data)#}
+                {#}#}
+            {#});#}
+        {#});#}
+        {#console.log('CONNARD');#}
+    {#</script>#}
+{% endblock %}
 {% block body %}
     {% block header %}
         <header>
