--- a/templates/view/tracks.html.twig
+++ b/templates/view/tracks.html.twig
@@ -2,119 +2,55 @@
 
 {% block content %}
 
-    <div class="container">
         <div class="text-center mt-4 pt-2 pb-4">
             <h1 class="h1-size">Top Tracks</h1>
         </div>
-        <div class="row">
-        <div class="col-3">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">{{ me.display_name }} <span class="flag-icon flag-icon-{{ me.country|lower }} "></span></h5>
-
-                <h6 class="card-subtitle mb-2 text-muted">{{ me.product }}</h6>
-                <p class="card-text"> {{ me.followers.total }} Followers</p>
-                <a href="{{ me.external_urls.spotify }}" class="card-link"><i class="fas fa-link"></i> Profile</a>
-                <a href=" {{ path('logout') }}" class="btn btn-primary float-right" role="button">Logout</a>
-
-
-            </div>
-
-        </div>
-            <div class="card" style="margin-top: 10px">
-                <div class="card-body">
-                    <h5 class="card-title">Current playing</h5>
-                    <p class="card-text" id="current-playing"> Song</p>
-                    <p class="card-text" id="play"> Play</p>
-                    <p class="card-text" id="pause"> Pause</p>
-
-
-                </div>
-
-            </div>
-        </div>
-            <div class="col-9 card">
-                    <div class="card-body">
-                        <h5 class="card-title">Mes playlists</h5>
-                        <div class="col-12">
-                            <div class="row">
-                                {% for playlist in myplaylists.items %}
-                        <div class="col-4 pl-0 pr-0 pt-2 pb-2">
-                                        <img src="{{ playlist.images[0].url}}" style="height: 82px"/>
-                                        <a href="{{playlist.external_urls.spotify}}"> {{ playlist.name|u.truncate(18, '...') }}</a>
+        <div class="container wide">
+            <h2 class="mb-4">Past Week</h2>
+            <div class="row">
+                {% for track in toptracks.items %}
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                    <div class="card mb-3">
+                        <div class="view overlay zoom">
+                            <img class="card-img-top cover" src="{{ track.album.images[0].url}}"/>
+                            <a href="{{track.external_urls.spotify}}">
+                            <div class="mask rgba-white-slight"></div>
+                            </a>
                         </div>
-                                {% endfor %}
-                            </div>
+
+                        <div class="card-body">
+                            <h4 class="card-title song-title">{{  track.name }}</h4>
+                            <p class="card-text song-sub">{{ track.artists[0].name }}</p>
                         </div>
                     </div>
+                </div>
+                {% endfor %}
             </div>
-        </div>
-        <br/>
-
-
-
-        <div class="row">
-            <div class="col-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Top artist</h5>
-                <ol type="1">
-                    {% for artist in topartists.items %}
-                        <li>{{ artist.name }}</li>
-                    {% endfor %}
-                </ol>
-
             </div>
-        </div>
+    <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-2 card-margin">
+        <div class="card card-cascade wider reverse hover-card" name="2">
+            <div class="view view-cascade overlay card-height">
+                <img class="card-img-top" src="https://i.scdn.co/image/ab67616d0000b273df7b5f05962e27997781fed1">
+                <a href="https://open.spotify.com/album/6ZyUYebQGvTsFncTHky7ZL"><div class="mask rgba-white-slight waves-effect waves-light"></div></a>
             </div>
-            <div class="col-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Top song</h5>
-                <ol type="1">
-                    {% for title in toptracks.items %}
-                        <li>{{ title.artists[0].name }} - {{  title.name }}</li>
-                    {% endfor %}
-                </ol>
-
+            <div class="card-body card-body-cascade bottom-card" id="hover-card-2" style="bottom: -10px;">
+                <h5 class="mb-1 card-main">El mariachi</h5>
+                <p class="text-muted mb-0 card-sub">
+                    <i class="fas fa-search blue-text mr-1"></i>
+                    Yasko
+                </p>
             </div>
-        </div>
-            </div>
+            <span class="badge badge-pill badge-primary left-badge">El mariachi</span>
+            <span class="badge badge-pill badge-danger right-badge"><i class="fas fa-chevron-down mr-2"></i>1</span>
         </div>
     </div>
     <pre><code>
-    {{ dump(myplaylists) }}
+    {{ dump(toptracks) }}
   </code></pre> <pre><code>
     {{ dump(devices) }}
   </code></pre>
 
 
     {% block javascripts %}
-        <script type="application/javascript">
-        $("#pause").on('click', function() {
-            $.ajax({
-                url:'{{ (path('pause')) }}',
-                type: "POST",
-                dataType: "json",
-                async: true,
-                success: function (data)
-                {
-                    console.log(data)
-                }
-            });
-        });
-        $("#play").on('click', function() {
-            $.ajax({
-                url:'{{ (path('play')) }}',
-                type: "POST",
-                dataType: "json",
-                async: true,
-                success: function (data)
-                {
-                    console.log(data)
-                }
-            });
-        });
-        </script>
     {% endblock %}
 {% endblock %}
