--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,43 +14,13 @@
 <body>
 {% block javascripts %}
     {{ encore_entry_script_tags('app') }}
-    {#<script type="text/javascript">#}
-        {#$("#pause").on('click', function() {#}
-            {#$.ajax({#}
-                {#url:'{{ (path('pause')) }}',#}
-                {#type: "POST",#}
-                {#dataType: "json",#}
-                {#async: true,#}
-                {#success: function (data)#}
-                {#{#}
-                    {#console.log(data)#}
-                {#}#}
-            {#});#}
-        {#});#}
-        {#$("#play").on('click', function() {#}
-            {#$.ajax({#}
-                {#url:'{{ (path('play')) }}',#}
-                {#type: "POST",#}
-                {#dataType: "json",#}
-                {#async: true,#}
-                {#success: function (data)#}
-                {#{#}
-                    {#console.log(data)#}
-                {#}#}
-            {#});#}
-        {#});#}
-        {#console.log('CONNARD');#}
-    {#</script>#}
 {% endblock %}
 {% block body %}
     {% block header %}
         <header>
             <!-- navbar -->
             <nav class="navbar navbar-dark navbar-expand-lg elegant-color-dark">
-                <a class="navbar-brand" href="#">
-                    <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" height="30" class="d-inline-block align-top"
-                         alt="mdb logo">
-                </a>
+                <a class="navbar-brand" href="#"><i class="fab fa-spotify green-text pr-2"></i>StatifyApp</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -73,7 +43,7 @@
                     <ul class="navbar-nav ml-auto nav-flex-icons">
                         <li class="nav-item avatar">
                             <a class="nav-link p-0" href="#">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
+                                <img src="{{me.images[0].url}}" class="rounded-circle z-depth-0"
                                      alt="avatar image" height="35">
                             </a>
                         </li>
