--- a/templates/view/dashboard.html.twig
+++ b/templates/view/dashboard.html.twig
@@ -2,90 +2,62 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="text-center mt-4 pt-2 pb-4">
-            <h1 class="h1-size">Dashboard</h1>
-            <h5 class="text-muted thin">Looking for your stats?</h5>
-        </div>
+    <div class="text-center mt-4 pt-2 pb-4">
+        <h1 class="h1-size">Dashboard</h1>
+    </div>
+    <div class="container wide">
+        <h2 class="h2-size">Weekly tracks</h2>
         <div class="row">
-        <div class="col-3">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">{{ me.display_name }} <span class="flag-icon flag-icon-{{ me.country|lower }} "></span></h5>
-
-                <h6 class="card-subtitle mb-2 text-muted">{{ me.product }}</h6>
-                <p class="card-text"> {{ me.followers.total }} Followers</p>
-                <a href="{{ me.external_urls.spotify }}" class="card-link"><i class="fas fa-link"></i> Profile</a>
-                <a href=" {{ path('logout') }}" class="btn btn-primary float-right" role="button">Logout</a>
-
-
-            </div>
-
-        </div>
-            <div class="card" style="margin-top: 10px">
-                <div class="card-body">
-                    <h5 class="card-title">Current playing</h5>
-                    <p class="card-text" id="current-playing"> Song</p>
-                    <p class="card-text" id="play"> Play</p>
-                    <p class="card-text" id="pause"> Pause</p>
-
-
-                </div>
-
-            </div>
-        </div>
-            <div class="col-9 card">
-                    <div class="card-body">
-                        <h5 class="card-title">Mes playlists</h5>
-                        <div class="col-12">
-                            <div class="row">
-                                {% for playlist in myplaylists.items %}
-                        <div class="col-4 pl-0 pr-0 pt-2 pb-2">
-                                        <img src="{{ playlist.images[0].url}}" style="height: 82px"/>
-                                        <a href="{{playlist.external_urls.spotify}}"> {{ playlist.name|u.truncate(18, '...') }}</a>
+            {% set id = 0 %}
+            {% for track in toptracks.items %}
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-2 card-margin">
+                    <div class="card card-cascade wider reverse hover-card" name="{{ id }}">
+                        <div class="view view-cascade overlay card-height">
+                            <img class="card-img-top" src="{{ track.album.images[0].url}}">
+                            <a href="{{track.external_urls.spotify}}"><div class="mask rgba-white-slight waves-effect waves-light"></div></a>
                         </div>
-                                {% endfor %}
-                            </div>
+                        <div class="card-body card-body-cascade bottom-card" id="hover-card-{{ id }}">
+                            <h5 class="mb-1 card-main">{{  track.name }}</h5>
+                            <p class="text-muted mb-0 card-sub">
+                                {{ track.artists[0].name }}
+                            </p>
                         </div>
+                        <span class="badge badge-pill badge-primary left-badge">{{ track.album.name}}</span>
+                        {#<span class="badge badge-pill badge-danger right-badge"><i class="fas fa-chevron-down mr-2"></i>1</span>#}
                     </div>
-            </div>
+                </div>
+                {% set id = id + 1 %}
+            {% endfor %}
         </div>
-        <br/>
-
-
-
+    </div>
+    <div class="container wide">
+        <h2 class="h2-size">Weekly artists</h2>
         <div class="row">
-            <div class="col-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Top artist</h5>
-                <ol type="1">
-                    {% for artist in topartists.items %}
-                        <li>{{ artist.name }}</li>
-                    {% endfor %}
-                </ol>
-
-            </div>
-        </div>
-            </div>
-            <div class="col-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Top song</h5>
-                <ol type="1">
-                    {% for title in toptracks.items %}
-                        <li>{{ title.artists[0].name }} - {{  title.name }}</li>
-                    {% endfor %}
-                </ol>
-
-            </div>
-        </div>
-            </div>
+            {% set id = 0 %}
+            {% for artist in topartists.items %}
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-2 card-margin">
+                    <div class="card card-cascade wider reverse hover-card" name="{{ id }}">
+                        <div class="view view-cascade overlay card-height">
+                            <img class="card-img-top" src="{{ artist.images[0].url}}">
+                            <a href="{{artist.external_urls.spotify}}"><div class="mask rgba-white-slight waves-effect waves-light"></div></a>
+                        </div>
+                        <div class="card-body card-body-cascade bottom-card" id="hover-card-{{ id }}">
+                            <h5 class="mb-1 card-main">{{  artist.name }}</h5>
+                            <p class="text-muted mb-0 card-sub">
+                                {{ artist.followers.total }} Followers
+                            </p>
+                        </div>
+                        {% if artist.genres %}<span class="badge badge-pill badge-primary left-badge">{{ artist.genres[0] }}</span>{% endif %}
+                        {#<span class="badge badge-pill badge-danger right-badge"><i class="fas fa-chevron-down mr-2"></i>1</span>#}
+                    </div>
+                </div>
+                {% set id = id + 1 %}
+            {% endfor %}
         </div>
     </div>
     <pre><code>
-    {{ dump(myplaylists) }}
+    {{ dump(me) }}
   </code></pre> <pre><code>
-    {{ dump(devices) }}
+    {{ dump(topartists.items) }}
   </code></pre>
 {% endblock %}
