--- a/templates/view/playlists.html.twig
+++ b/templates/view/playlists.html.twig
@@ -2,91 +2,36 @@
 
 {% block content %}
 
-    <div class="container">
-        <h1>Profile</h1>
+    <div class="text-center mt-4 pt-2 pb-4">
+        <h1 class="h1-size">My playlists</h1>
+    </div>
+    <div class="container wide">
         <div class="row">
-        <div class="col-3">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">{{ me.display_name }} <span class="flag-icon flag-icon-{{ me.country|lower }} "></span></h5>
-
-                <h6 class="card-subtitle mb-2 text-muted">{{ me.product }}</h6>
-                <p class="card-text"> {{ me.followers.total }} Followers</p>
-                <a href="{{ me.external_urls.spotify }}" class="card-link"><i class="fas fa-link"></i> Profile</a>
-                <a href=" {{ path('logout') }}" class="btn btn-primary float-right" role="button">Logout</a>
-
-
-            </div>
-
-        </div>
-            <div class="card" style="margin-top: 10px">
-                <div class="card-body">
-                    <h5 class="card-title">Current playing</h5>
-                    <p class="card-text" id="current-playing"> Song</p>
-                    <p class="card-text" id="play"> Play</p>
-                    <p class="card-text" id="pause"> Pause</p>
-
-
-                </div>
-
-            </div>
-        </div>
-            <div class="col-9 card">
-                    <div class="card-body">
-                        <h5 class="card-title">Mes playlists</h5>
-                        <div class="col-12">
-                            <div class="row">
-                                {% for playlist in myplaylists.items %}
-                        <div class="col-4 pl-0 pr-0 pt-2 pb-2">
-                                        <img src="{{ playlist.images[0].url}}" style="height: 82px"/>
-                                        <a href="{{playlist.external_urls.spotify}}"> {{ playlist.name|u.truncate(18, '...') }}</a>
+            <img src="" style="height: 82px"/>
+            <a href=""> </a>
+            {% set id = 0 %}
+            {% for playlist in myplaylists.items %}
+                <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-2 card-margin">
+                    <div class="card card-cascade wider reverse hover-card" name="{{ id }}">
+                        <div class="view view-cascade overlay card-height">
+                            <img class="card-img-top" src="{{ playlist.images[0].url}}">
+                            <a href="{{playlist.external_urls.spotify}}"><div class="mask rgba-white-slight waves-effect waves-light"></div></a>
                         </div>
-                                {% endfor %}
-                            </div>
+                        <div class="card-body card-body-cascade bottom-card" id="hover-card-{{ id }}">
+                            <h5 class="mb-1 card-main">{{ playlist.name|u.truncate(18, '...') }}</h5>
+                            <p class="text-muted mb-0 card-sub">
+{#                                {{ track.artists[0].name }}#}
+                            </p>
                         </div>
+{#                        <span class="badge badge-pill badge-primary left-badge">{{ track.album.name}}</span>#}
+                        {% if playlist.owner.id == me.id %}<span class="badge badge-pill badge-primary right-badge edit-playlist" style="cursor: pointer" data-idplaylist="{{ url('playlistEdit', {id: playlist.id}) }}"><i class="fas fa-pen"></i></span>{% endif %}
                     </div>
-            </div>
-        </div>
-        <br/>
-
-
-
-        <div class="row">
-            <div class="col-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Top artist</h5>
-                <ol type="1">
-                    {% for artist in topartists.items %}
-                        <li>{{ artist.name }}</li>
-                    {% endfor %}
-                </ol>
-
-            </div>
-        </div>
-            </div>
-            <div class="col-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Top song</h5>
-                <ol type="1">
-                    {% for title in toptracks.items %}
-                        <li>{{ title.artists[0].name }} - {{  title.name }}</li>
-                    {% endfor %}
-                </ol>
-
-            </div>
-        </div>
-            </div>
+                </div>
+                {% set id = id + 1 %}
+            {% endfor %}
         </div>
     </div>
     <pre><code>
     {{ dump(myplaylists) }}
-  </code></pre> <pre><code>
-    {{ dump(devices) }}
   </code></pre>
-
-
-    {% block javascripts %}
-    {% endblock %}
 {% endblock %}
