--- a/templates/view/tracks.html.twig
+++ b/templates/view/tracks.html.twig
@@ -16,11 +16,21 @@
                                 <a href="{{track.external_urls.spotify}}"><div class="mask rgba-white-slight waves-effect waves-light"></div></a>
                             </div>
                             <div class="card-body card-body-cascade bottom-card" id="hover-card-{{ id }}">
-                                <h5 class="mb-1 card-main">{{  track.name }}</h5>
-                                <p class="text-muted mb-0 card-sub">
-                                    {{ track.artists[0].name }}
-                                </p>
+                                <div class="row">
+                                    <div class="col-9">
+                                        <h5 class="mb-1 card-main">{{  track.name }}</h5>
+                                        <p class="text-muted mb-0 card-sub">
+                                            {{ track.artists[0].name }}
+                                        </p>
+                                    </div>
+                                    {% if devices|length > 0 and active%}
+                                        <div class="col-3">
+                                            <i class="fas fa-2x fa-play-circle" data-track="{{track.uri}}" data-url="{{ (path('play')) }}"></i>
+                                        </div>
+                                    {% endif %}
+                                </div>
                             </div>
+
                             <span class="badge badge-pill badge-primary left-badge">{{ track.album.name}}</span>
                             {#<span class="badge badge-pill badge-danger right-badge"><i class="fas fa-chevron-down mr-2"></i>1</span>#}
                         </div>
