--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}StatifyApp!{% endblock %}</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <script src="https://kit.fontawesome.com/a5291c0be8.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
         <header>
             <!-- navbar -->
             <nav class="navbar navbar-dark navbar-expand-lg elegant-color-dark">
-                <a class="navbar-brand" href="#"><i class="fab fa-spotify green-text pr-2"></i>StatifyApp</a>
+                <a class="navbar-brand" href="/dashboard"><i class="fab fa-spotify green-text pr-2"></i>StatifyApp</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
