--- a/templates/view/dashboard.html.twig
+++ b/templates/view/dashboard.html.twig
@@ -31,8 +31,11 @@
                                 {% endif %}
                         </div>
                         </div>
+
                         <span class="badge badge-pill badge-primary left-badge">{{ track.album.name}}</span>
-                        {#<span class="badge badge-pill badge-danger right-badge"><i class="fas fa-chevron-down mr-2"></i>1</span>#}
+{#                        {% if loop.index == 2 %}<span class="badge badge-pill badge-danger right-badge"><i class="fas fa-chevron-down mr-2"></i>1</span>{% endif %}#}
+{#                        {% if loop.index == 4 %}<span class="badge badge-pill badge-success right-badge"><i class="fas fa-chevron-up mr-2"></i>2</span>{% endif %}#}
+
                     </div>
                 </div>
                 {% set id = id + 1 %}
@@ -64,4 +67,6 @@
             {% endfor %}
         </div>
     </div>
+    <pre>
+</pre>
 {% endblock %}
